--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <!-- Project 3 -->
                 <div class="project-card">
                     <div class="project-img placeholder-img">
-                        <img src="assets/images/shamba.pngs" alt="Shamba AI" class="project-img">
+                        <img src="assets/images/shamba.png" alt="Shamba AI" class="project-img">
                     </div>
                     <h3>Shamba AI</h3>
                     <p>A prospective start up powered by PLP TalentHub. It will help farmers know which pesticide to
