--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <h3>Passport index map</h3>
                     <p>A fully responsive map showing how each country's passport is in relation to other countries in
                         the world</p>
-                    <a href="passport-power-sam.onrender.com"><em>View Project →</em></a>
+                    <a href="https://passport-power-sam.onrender.com"><em>View Project →</em></a>
                 </div>
 
                 <!-- Project 3 -->
